Remove samples where categories are NaNs

--- a/ETL_Pipeline.ipynb
+++ b/ETL_Pipeline.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries\n",
+    "# Import libraries\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,27 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(categories['related'][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1059,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1071,47 @@
     "    \n",
     "    # convert column from string to numeric\n",
     "    categories[column] = pd.to_numeric(categories[column])\n",
+    "    \n",
     "categories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    20042\n",
+      "0     6140\n",
+      "2      204\n",
+      "Name: related, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1    20042\n",
+       "0     6140\n",
+       "Name: related, dtype: int64"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# After running into problems with the ML pipeline and looking around for help, some\n",
+    "# students mentioned that the related category has labels of 0, 1, and 2. Since there\n",
+    "# is only a small number of 2's which is believed to indicate uncertainty about \n",
+    "# whether the message is related, I will drop these rows. \n",
+    "\n",
+    "print(categories['related'].value_counts())\n",
+    "categories = categories[categories['related'] != 2]\n",
+    "categories['related'].value_counts()"
    ]
   },
   {
@@ -1105,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1211,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1258,23 +1278,23 @@
        "      <td>Weather update - a cold front from Cuba that c...</td>\n",
        "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1282,23 +1302,23 @@
        "      <td>Is the Hurricane over or is it not over</td>\n",
        "      <td>Cyclone nan fini osinon li pa fini</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1306,23 +1326,23 @@
        "      <td>Looking for someone but no name</td>\n",
        "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1330,23 +1350,23 @@
        "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
        "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1354,23 +1374,23 @@
        "      <td>says: west side of Haiti, rest of the country ...</td>\n",
        "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
        "      <td>direct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1386,37 +1406,37 @@
        "4  12  says: west side of Haiti, rest of the country ...   \n",
        "\n",
        "                                            original   genre  related  \\\n",
-       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n",
-       "1                 Cyclone nan fini osinon li pa fini  direct        1   \n",
-       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        1   \n",
-       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
-       "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
+       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct      1.0   \n",
+       "1                 Cyclone nan fini osinon li pa fini  direct      1.0   \n",
+       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct      1.0   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct      1.0   \n",
+       "4  facade ouest d Haiti et le reste du pays aujou...  direct      1.0   \n",
        "\n",
        "   request  offer  aid_related  medical_help  medical_products      ...        \\\n",
-       "0        0      0            0             0                 0      ...         \n",
-       "1        0      0            1             0                 0      ...         \n",
-       "2        0      0            0             0                 0      ...         \n",
-       "3        1      0            1             0                 1      ...         \n",
-       "4        0      0            0             0                 0      ...         \n",
+       "0      0.0    0.0          0.0           0.0               0.0      ...         \n",
+       "1      0.0    0.0          1.0           0.0               0.0      ...         \n",
+       "2      0.0    0.0          0.0           0.0               0.0      ...         \n",
+       "3      1.0    0.0          1.0           0.0               1.0      ...         \n",
+       "4      0.0    0.0          0.0           0.0               0.0      ...         \n",
        "\n",
        "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
-       "0            0                     0                0       0      0     0   \n",
-       "1            0                     0                1       0      1     0   \n",
-       "2            0                     0                0       0      0     0   \n",
-       "3            0                     0                0       0      0     0   \n",
-       "4            0                     0                0       0      0     0   \n",
+       "0          0.0                   0.0              0.0     0.0    0.0   0.0   \n",
+       "1          0.0                   0.0              1.0     0.0    1.0   0.0   \n",
+       "2          0.0                   0.0              0.0     0.0    0.0   0.0   \n",
+       "3          0.0                   0.0              0.0     0.0    0.0   0.0   \n",
+       "4          0.0                   0.0              0.0     0.0    0.0   0.0   \n",
        "\n",
        "   earthquake  cold  other_weather  direct_report  \n",
-       "0           0     0              0              0  \n",
-       "1           0     0              0              0  \n",
-       "2           0     0              0              0  \n",
-       "3           0     0              0              0  \n",
-       "4           0     0              0              0  \n",
+       "0         0.0   0.0            0.0            0.0  \n",
+       "1         0.0   0.0            0.0            0.0  \n",
+       "2         0.0   0.0            0.0            0.0  \n",
+       "3         0.0   0.0            0.0            0.0  \n",
+       "4         0.0   0.0            0.0            0.0  \n",
        "\n",
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1468,7 @@
        "170"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1499,7 @@
        "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,13 +1513,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 6.5. Extra step to remove rows with no labels\n",
+    "I am running into problems in my ML pipeline because the labels contain NaNs.  \n",
+    "I decided to remove the 188 rows at this step.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "16046\n",
+      "0\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n",
+      "188\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine number of NaNs per column\n",
+    "for column in df.columns:\n",
+    "    print(df[column].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26028, 40)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(26028, 40)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove 188 rows with NaNs\n",
+    "print(df.shape)\n",
+    "df = df.dropna(subset=['related', 'request', 'offer',\n",
+    "       'aid_related', 'medical_help', 'medical_products', 'search_and_rescue',\n",
+    "       'security', 'military', 'child_alone', 'water', 'food', 'shelter',\n",
+    "       'clothing', 'money', 'missing_people', 'refugees', 'death', 'other_aid',\n",
+    "       'infrastructure_related', 'transport', 'buildings', 'electricity',\n",
+    "       'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure',\n",
+    "       'weather_related', 'floods', 'storm', 'fire', 'earthquake', 'cold',\n",
+    "       'other_weather', 'direct_report'])\n",
+    "\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 7. Save the clean dataset into an sqlite database.\n",
     "You can do this with pandas [`to_sql` method](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_sql.html) combined with the SQLAlchemy library. Remember to import SQLAlchemy's `create_engine` in the first cell of this notebook to use it below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
