Delete child_alone column which only had one label

--- a/ETL_Pipeline.ipynb
+++ b/ETL_Pipeline.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 133,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "Name: related, dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,6 +1115,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# After running into problems trying a SVC classifier on the data, I realized that\n",
+    "# the child_alone column only had 1 label, all 0's and no 1's, therefore I dropped\n",
+    "# this column.\n",
+    "\n",
+    "categories = categories.drop(['child_alone'], axis=1)\n",
+    "'child_alone' in categories.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1125,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1236,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1419,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
+       "<p>5 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1433,10 +1458,10 @@
        "3         0.0   0.0            0.0            0.0  \n",
        "4         0.0   0.0            0.0            0.0  \n",
        "\n",
-       "[5 rows x 40 columns]"
+       "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1493,7 @@
        "170"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1524,7 @@
        "0"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1556,6 @@
       "0\n",
       "16046\n",
       "0\n",
-      "188\n",
       "188\n",
       "188\n",
       "188\n",
@@ -1578,33 +1602,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(26028, 40)\n"
+      "(26216, 39)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(26028, 40)"
+       "(26028, 39)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove 188 rows with NaNs\n",
+    "# Remove 188 rows with NaNs (excluding the 'original' column which has even more \n",
+    "# NaNs and is not important for further analysis)\n",
     "print(df.shape)\n",
     "df = df.dropna(subset=['related', 'request', 'offer',\n",
     "       'aid_related', 'medical_help', 'medical_products', 'search_and_rescue',\n",
-    "       'security', 'military', 'child_alone', 'water', 'food', 'shelter',\n",
+    "       'security', 'military', 'water', 'food', 'shelter',\n",
     "       'clothing', 'money', 'missing_people', 'refugees', 'death', 'other_aid',\n",
     "       'infrastructure_related', 'transport', 'buildings', 'electricity',\n",
     "       'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure',\n",
@@ -1624,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
